k8s-manifests/fullstack-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: myapp.local
      http:
        paths:
          - path: /products
            pathType: Prefix
            backend:
              service:
                name: product
                port:
                  number: 80
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: user
                port:
                  number: 80
          - path: /graphql
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
